--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
 
 <p><b>https://api.offers.deem.com/</b></p>
 
+<h2 id="deal">Deal</h2>
+
+<p>A deal is a product offering goods or services from different merchants at discounted levels. </p>
+
+<h2 id="purchase">Purchase</h2>
+
+<p>A purchase is buying a quantity of unit inventory of a specific deal which results in either a voucher, to redeem the deal at the deal merchant’s location or website, being bought or a good being shipped directly to the purchaser.</p>
+
 <h2 id="example-implementation">Example Implementation</h2>
 
 <p>Using just two simple API calls (get deals and execute purchase) you can provide offers to your users. Below is a brief description of how that would work with an existing mobile application:</p>
