--- a/v1/get_deals/index.html
+++ b/v1/get_deals/index.html
@@ -30,7 +30,9 @@
       <div class="content">
         <h1 id="get-deals">Get Deals</h1>
 
-<p>This api will return a set of applicable deal resources based upon the filtering parameters that are passed in the request. You can request a broad list of available deals or very specific highly targeted deals to provide to your users.</p>
+<p>This api call will return a set of applicable deal resources based upon the filtering parameters passed in the request. You can request a broad list of available deals or very specific highly targeted deals to provide to your users.</p>
+
+<p>Each deal has a number of attributes that can be filtered on using this API call. Everything from price point, inventory, merchant, deal title, run date, location, etc… All of the possible filtering parameters are mentioned below in the Request Parameters section. Also, a detailed explanation of the deal construct can be found in the Response section to provide further background information on what a deal resource looks like.</p>
 
 <h2 id="request">Request</h2>
 
