--- a/v1/quick_start/index.html
+++ b/v1/quick_start/index.html
@@ -49,7 +49,7 @@
 
 <h2 id="step-2---get-deals">Step 2 - Get Deals</h2>
 
-<p>Once you have your api key, you can now request available deals which you can display on your website, in emails, or in your mobile app (surfaces). To get a set of deal inventory available, you can make a request like the one below: </p>
+<p>Once you have your api key, you can now request available deals which you can display on your website, in emails, or in your mobile app (surfaces). To get a set of deal inventory available in San Francisco, you can make a request like the one below: </p>
 
 <pre class="headers"><code>GET /v1/deals?api_key=1234567</code></pre>
 
