--- a/v1/deals/index.html
+++ b/v1/deals/index.html
@@ -135,7 +135,48 @@
 <em>Date</em> The date and time the deal voucher will expire</dd>
   <dt>state</dt>
   <dd>
-<em>String</em> The workflow state the deal is currently in</dd>
+<em>String</em> The workflow state the deal is currently in (in-flight, approved, submitted, landed, in-review, rejected, paused, deleted)</dd>
+  <dd>
+    <ul>
+<li>submitted - base deal data has been entered and not available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>in-review - needs approval to continue in work flow and not available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>rejected - failed approval and not available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>approved - content complete and ready to be run, but not purchasable</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>in-flight - available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>paused - sale haulted and not currently available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>landed - run window has passed and no longer available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>deleted - removed<br><br>
+</li>
+    </ul>
+</dd>
   <dt>purchasable_number</dt>
   <dd>
 <em>Integer</em> The quantity of units available to sell</dd>
@@ -408,7 +449,48 @@
 <em>Date</em> The date and time the deal voucher will expire</dd>
   <dt>state</dt>
   <dd>
-<em>String</em> The workflow state the deal is currently in</dd>
+<em>String</em> The workflow state the deal is currently in (in-flight, approved, submitted, landed, in-review, rejected, paused, deleted)</dd>
+  <dd>
+    <ul>
+<li>submitted - base deal data has been entered and not available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>in-review - needs approval to continue in work flow and not available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>rejected - failed approval and not available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>approved - content complete and ready to be run, but not purchasable</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>in-flight - available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>paused - sale haulted and not currently available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>landed - run window has passed and no longer available for purchase</li>
+    </ul>
+</dd>
+  <dd>
+    <ul>
+<li>deleted - removed<br><br>
+</li>
+    </ul>
+</dd>
   <dt>purchasable_number</dt>
   <dd>
 <em>Integer</em> The quantity of units available to sell</dd>
