--- a/v1/core/index.html
+++ b/v1/core/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title>Additional Calls - OfferEngine API</title>
+  <title>Core Calls - OfferEngine API</title>
   <link href="/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -28,81 +28,22 @@
 
     <div id="wrapper">
       <div class="content">
-        <h1 id="additional-calls">Additional Calls</h1>
+        <h1 id="core-calls">Core Calls</h1>
 
-<p>The following requests provide additional functionality which are not necessary to provide Deem Offers deals to your customers.</p>
+<p>The following calls provide the core functionality necessary to provide Deem Offers deals to your customers.</p>
 
-<h2 id="deals">Deals</h2>
+<h2 id="get-deals">Get Deals</h2>
 
-<p>Additional deal operations</p>
-
-<ul>
-<li>
-<a href="/v1/deals/">Deals</a>
-    <ul>
-<li><a href="/v1/deals/discussions/">Deal Discussions</a></li>
-    </ul>
-</li>
-</ul><h2 id="purchases">Purchases</h2>
-
-<p>Additional purchase operations</p>
+<p>This call allows you to get a list of deals currently available for sale to your customers.</p>
 
 <ul>
-<li><a href="/v1/purchases/">Purchases</a></li>
-</ul><h2 id="sessions">Sessions</h2>
+<li><a href="/v1/get_deals/">Get Deals</a></li>
+</ul><h2 id="execute-purchases">Execute Purchases</h2>
 
-<p>User session operations</p>
-
-<ul>
-<li>
-<a href="/v1/sessions/">Sessions</a>
-    <ul>
-<li><a href="/v1/sessions/leads/">Session Leads</a></li>
-    </ul>
-</li>
-</ul><h2 id="regions">Regions</h2>
-
-<p>Additional operations by region</p>
+<p>This call allows you to make deal purchases for your customers. </p>
 
 <ul>
-<li>
-<a href="/v1/regions/">Regions</a>
-    <ul>
-<li><a href="/v1/regions/deals/">Region Deals</a></li>
-      <li><a href="/v1/regions/activity/">Region Activity</a></li>
-    </ul>
-</li>
-</ul><h2 id="users">Users</h2>
-
-<p>Additional user operations</p>
-
-<ul>
-<li>
-<a href="/v1/users/">Users</a>
-    <ul>
-<li><a href="/v1/users/access_tokens/">User Tokens</a></li>
-      <li><a href="/v1/users/card_links/">User Card Links</a></li>
-      <li><a href="/v1/users/coupons/">User Coupons</a></li>
-      <li><a href="/v1/users/credit_cards/">User Credit Cards</a></li>
-      <li><a href="/v1/users/images/">User Images</a></li>
-      <li><a href="/v1/users/purchases/">User Purchases</a></li>
-      <li><a href="/v1/users/saved_deals/">User Saved Deals</a></li>
-      <li><a href="/v1/users/shipping_addresses/">User Shipping Addresses</a></li>
-      <li><a href="/v1/users/subscriptions/">User Subscriptions</a></li>
-    </ul>
-</li>
-</ul><h2 id="targeted-emails">Targeted Emails</h2>
-
-<p>Marketing email operations</p>
-
-<ul>
-<li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
-</ul><h2 id="stats">Stats</h2>
-
-<p>Stats information operations</p>
-
-<ul>
-<li><a href="/v1/stats/merchants/">Stats</a></li>
+<li><a href="/v1/full_purchase/">Execute Purchases</a></li>
 </ul>
       </div>
 
