--- a/v1/errors/index.html
+++ b/v1/errors/index.html
@@ -118,27 +118,32 @@
         <div class="js-toggle-list sidebar-module expandable">
           <ul>
             <li>
-              <h3><a href="/">Overview</a></h3>
+              <h3>
+                <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
+                <a href="/">Overview</a>
+              </h3>
+              <ul>
+                <li><a href="/v1/authentication/">Authentication</a></li>
+                <li><a href="/v1/errors/">Errors</a></li>
+              </ul>
             </li>
             <li>
               <h3><a href="/v1/quick_start/">Quick Start</a></h3>
             </li>
             <li>
-              <h3><a href="/v1/authentication/">Authentication</a></h3>
-            </li>
-            <li>
-              <h3><a href="/v1/errors/">Errors</a></h3>
-            </li>
-            <li>
-              <h3><a href="/v1/get_deals/">Get Deals</a></h3>
-            </li>
-            <li>
-              <h3><a href="/v1/full_purchase/">Execute Purchases</a></h3>
+              <h3>
+                <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
+                <a href="/v1/core/">Core Calls</a>
+              </h3>
+              <ul>
+                <li><a href="/v1/get_deals/">Get Deals</a></li>
+                <li><a href="/v1/full_purchase/">Execute Purchases</a></li>
+              </ul>
             </li>
             <li>
               <h3>
                 <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
-                <a href="/v1/advanced/">Additional Requests</a>
+                <a href="/v1/advanced/">Additional Calls</a>
               </h3>
               <ul>
                 <li><a href="/v1/deals/">Deals</a></li>
