--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
   <header class="row">
     <div class="centered clearfix">
       <h1>
-        <a href="http://www.deem.com/developer/"><img src="/shared/images/deem_developers.png" alt="Deem Developers" /></a>
+        <a href="/"><img src="/shared/images/deem_developers.png" alt="Deem Developers" /></a>
       </h1>
       <nav>
         <ul>
           <li><a href="http://www.deem.com/developer/">Home</a></li>
-          <li><a href="/" class="active">Documentation</a></li>
+          <li><a href="/">Documentation</a></li>
           <li><a href="mailto:support@offerengine.com">Support</a></li>
         </ul>
       </nav>
@@ -112,11 +112,16 @@
 
 <h2 id="purchase">Purchase</h2>
 
-<p>A <em>purchase</em> is a transaction in which a person (the <em>purchaser</em>) buys a quantity of unit inventory of a specific deal. A purchase results in one of the following:
-* A <em>voucher</em>, which a purchaser uses to redeem the deal at the deal merchant’s location or website
-* A product that is shipped directly to the purchaser</p>
+<p>A <em>purchase</em> is a transaction in which a person (the <em>purchaser</em>) buys a quantity of unit inventory of a specific deal. A purchase results in one of the following:</p>
 
-<h2 id="implementation-example">Implementation Example</h2>
+<ul>
+<li>
+    <p>A <em>voucher</em>, which a purchaser uses to redeem the deal at the deal merchant’s location or website</p>
+  </li>
+  <li>
+    <p>A product that is shipped directly to the purchaser</p>
+  </li>
+</ul><h2 id="implementation-example">Implementation Example</h2>
 
 <p>You can provide deals to your customers using just two simple API calls: <em>get deals</em> and <em>execute a purchase.</em> The following example is a brief description of how these calls work with an existing mobile application.</p>
 
