--- a/v1/get_deals/index.html
+++ b/v1/get_deals/index.html
@@ -283,13 +283,13 @@
 <em>Boolean</em> Flagged if the deal has ended</dd>
   <dt>start_at</dt>
   <dd>
-<em>Date</em> The date and time that the deal was first available to purchase (times are in <a href="http://en.wikipedia.org/wiki/Coordinated_Universal_Time">UTC</a>)</dd>
+<em>Date</em> The date and time that the deal was first available to purchase (times are in UTC)</dd>
   <dt>end_at</dt>
   <dd>
-<em>Date</em> The date and time that the deal will no longer be available to purchase (times are in <a href="http://en.wikipedia.org/wiki/Coordinated_Universal_Time">UTC</a>)</dd>
+<em>Date</em> The date and time that the deal will no longer be available to purchase (times are in UTC)</dd>
   <dt>expires_at</dt>
   <dd>
-<em>Date</em> The date and time that the deal voucher will expire (times are in <a href="http://en.wikipedia.org/wiki/Coordinated_Universal_Time">UTC</a>)</dd>
+<em>Date</em> The date and time that the deal voucher will expire (times are in UTC)</dd>
   <dt>state</dt>
   <dd>
 <em>String</em> The current workflow state of the deal:</dd>
