--- a/v1/full_purchase/index.html
+++ b/v1/full_purchase/index.html
@@ -135,10 +135,10 @@
 <dt>email</dt>
   <dd>
 <em>String</em> Email address of the user making the purchase</dd>
-  <dt>password</dt>
+  <dt>pass</dt>
   <dd>
 <em>String</em> Password of user making the purchase</dd>
-  <dt>password_confirmation</dt>
+  <dt>pass_confirmation</dt>
   <dd>
 <em>String</em> Exact duplicate of user password</dd>
   <dt>first_name</dt>
