--- a/v1/deals/index.html
+++ b/v1/deals/index.html
@@ -266,10 +266,13 @@
   <dt>highlights</dt>
   <dd>
 <em>String</em> Additional important details about the deal</dd>
+  <dt>instructions</dt>
+  <dd>
+<em>String</em> Usage details for the deal</dd>
   <dt>category</dt>
   <dd>
 <em>String</em> Broad deal type</dd>
-  <dt>:subcategory</dt>
+  <dt>subcategory</dt>
   <dd>
 <em>String</em> More specific deal type</dd>
   <dt>robotitle</dt>
@@ -580,10 +583,13 @@
   <dt>highlights</dt>
   <dd>
 <em>String</em> Additional important details about the deal</dd>
+  <dt>instructions</dt>
+  <dd>
+<em>String</em> Usage details for the deal</dd>
   <dt>category</dt>
   <dd>
 <em>String</em> Broad deal type</dd>
-  <dt>:subcategory</dt>
+  <dt>subcategory</dt>
   <dd>
 <em>String</em> More specific deal type</dd>
   <dt>robotitle</dt>
